--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-swagger-ui": "^3.0.17-0",
+    "swagger-ui": "^5.11.2",
+    "swagger-ui-react": "^5.11.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
